After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 747951 - Tablet calibration targets do not respond to clicks
Tablet calibration targets do not respond to clicks
Status: RESOLVED FIXED
Product: clutter
Classification: Platform
Component: gdk
1.22.x
Other Linux
: Normal normal
: ---
Assigned To: clutter-maint
clutter-maint
: 756971 (view as bug list)
Depends on:
Blocks:
 
 
Reported: 2015-04-15 20:44 UTC by Jason Gerecke
Modified: 2015-10-22 15:11 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
gdk/device: Propagate more device details from GDK (2.30 KB, patch)
2015-04-22 13:18 UTC, Emmanuele Bassi (:ebassi)
none Details | Review
gdk/device: Propagate more device details from GDK / v2 (2.42 KB, patch)
2015-04-22 13:23 UTC, Emmanuele Bassi (:ebassi)
committed Details | Review

Description Jason Gerecke 2015-04-15 20:44:11 UTC
The targets in the Wacom panel's calibration tool no longer respond to clicks from the appropriate stylus. This occurs because the device ID which is provided to the calibration tool by 'cc-wacom-page.c:run_calibration' is not equal to the device ID that is seen when the button is pressed.
Comment 1 Jason Gerecke 2015-04-15 21:18:02 UTC
Further investigation shows that the Wacom panel uses the "device-id" property that is present on GdkDevice objects which originate from the XI2 backend, while clutter doesn't peek at this property and instead creates its own device IDs by incrementing a counter as it becomes aware of GdkDevice objects.

As a workaround, "CLUTTER_BACKEND=x11" can be set in the environment prior to running gnome-control-center. With this set, the clutter devices will have the same XI2 device IDs that are present in the "device-id" property.
Comment 2 Emmanuele Bassi (:ebassi) 2015-04-22 13:04:51 UTC
The device-id property is a XI2 property only, so if Clutter were to use it in the GDK backend we'd have to handle it specially, not through generic code.
Comment 3 Emmanuele Bassi (:ebassi) 2015-04-22 13:18:15 UTC
Created attachment 302149 [details] [review]
gdk/device: Propagate more device details from GDK

In order to do device matching we need to propagate more information,
like the device_id (only on X11 with the XInput2 extension enabled),
the vendor id, and the product id.
Comment 4 Emmanuele Bassi (:ebassi) 2015-04-22 13:23:30 UTC
Created attachment 302150 [details] [review]
gdk/device: Propagate more device details from GDK / v2

In order to do device matching we need to propagate more information,
like the device_id (only on X11 with the XInput2 extension enabled),
the vendor id, and the product id.

Changes from v1:
 - Avoid run time warnings with master devices
Comment 5 Emmanuele Bassi (:ebassi) 2015-04-22 13:26:22 UTC
Re-assigning to Clutter.
Comment 6 Emmanuele Bassi (:ebassi) 2015-06-03 12:03:51 UTC
*** Bug 747880 has been marked as a duplicate of this bug. ***
Comment 7 Emmanuele Bassi (:ebassi) 2015-06-03 12:09:29 UTC
Pushed attachment 302150 [details] [review] to master, but more testing is appreciated.
Comment 8 Jason Gerecke 2015-06-16 18:45:21 UTC
I was finally able to get my jhbuild instance of GNOME updated and running. I can confirm that this seems to have done the trick: the targets now respond to clicks when using either the x11 or gdk backend. Thanks!
Comment 9 Bastien Nocera 2015-10-22 15:11:58 UTC
*** Bug 756971 has been marked as a duplicate of this bug. ***